[gd_scene load_steps=6 format=2]

[ext_resource path="res://sprites/SHIPS/SHIP_01.png" type="Texture" id=1]
[ext_resource path="res://scripts/enemies/ships/ship_01.gd" type="Script" id=2]
[ext_resource path="res://sound/explosionCrunch_002.ogg" type="AudioStream" id=3]
[ext_resource path="res://sprites/distroy/explosion01.png" type="Texture" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 20.01
height = 11.288

[node name="ship_01" type="Area2D" groups=[
"enemy",
"ship",
]]
collision_layer = 1048575
collision_mask = 1048575
script = ExtResource( 2 )

[node name="sprite" type="Sprite" parent="."]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )

[node name="shape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="distroy_sprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 4 )

[node name="distroy_sound" type="AudioStreamPlayer" parent="." groups=[
"enemy",
]]
stream = ExtResource( 3 )
pitch_scale = 0.75

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 0, 26.203 )
[connection signal="area_entered" from="." to="." method="_on_ship_01_area_entered"]
[connection signal="finished" from="distroy_sound" to="." method="_on_distroy_sound_finished"]
